CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_cpp_sample)
PROJECT(${PROJECT_NAME})

SET(PRDT_INCLUDE_DIRS "../../include/prdt.h")
SET(PRDT_LIBS "../../build/prdt_lib/")

INCLUDE_DIRECTORIES(${PRDT_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} sample.cpp)
add_dependencies(${PROJECT_NAME} ${PRDT_LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PRDT_LIBS})
