CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_cpp_sample)
PROJECT(${PROJECT_NAME})

SET(CMAKE_MODULE_PATH /usr/local/share/prdt)
FIND_PACKAGE(PRDT REQUIRED)


INCLUDE_DIRECTORIES(${PRDT_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} sample.cpp)
add_dependencies(${PROJECT_NAME} ${PRDT_LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PRDT_LIBS})
