CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_cpp_sample)
PROJECT(${PROJECT_NAME})

SET(CMAKE_MODULE_PATH /usr/local/share/prdt)
FIND_PACKAGE(PRDT REQUIRED)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})


INCLUDE_DIRECTORIES(${PRDT_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} sample.cpp)
add_dependencies(${PROJECT_NAME} ${PRDT_LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PRDT_LIBS} ${OpenCV_LIBS})
